# awsiot-openwrt-extensions

./: CMakeLists.txt  README.md
configs/: CMakeLists.txt  awsiot-demo  awsiot-events  awsiot-trighappy.conf  keep-aws-iot-events
luci-ui/: CMakeLists.txt
luci-ui/luci/controller/awsiot/: awsuimodule.lua
luci-ui/luci/model/cbi/awsiot_cbi/: awsiot-event-settings.lua  awsiot-srvice-settings.lua
scripts/: BTN_0  CMakeLists.txt  init-accessories.sh  key-input-event-handler.sh
